# eightfoldai

./: .gitignore  README.md  SESSION_HANDOFF.md  TECHNICAL_DESIGN.md  commands.md  pyproject.toml
candidate_transformer/: __init__.py
config/: skills.json
demo/: ats_demo.json  gh.json  github_live.json  github_payload.json  linkedin_payload.json  neeraj.csv  notes.txt  structured.csv
input/: neeraj_ats.json  neeraj_recruiter.csv
samples/: README.md  recruiter.csv  resume_jane_doe.docx  resume_jane_doe.txt
tests/: conftest.py  test_adapter_registry.py  test_assignment_config.py  test_ats_json_adapter.py  test_candidate_id.py  test_cli.py  test_confidence_model.py  test_conflict_resolution_showcase.py  test_email_normalizer.py  test_end_to_end_example.py  test_engine_logging.py  test_github_adapter.py  test_identity_resolver.py  test_linkedin_adapter.py  test_merge_dedup_provenance.py  test_models.py  test_normalizers_phone_date_country.py  test_path_resolver.py  test_pbt_agreement_monotonicity.py  test_pbt_batch_isolation.py  test_pbt_candidate_id.py  test_pbt_confidence_bounds.py  test_pbt_confidence_formula.py  test_pbt_e2e_determinism.py  test_pbt_email_idempotence.py  test_pbt_identity_grouping.py  test_pbt_list_dedup.py  test_pbt_missing_invalid_paths.py  test_pbt_normalization.py  test_pbt_projection_isolation.py  test_pbt_projection_paths.py  test_pbt_provenance_completeness.py  test_pbt_robustness.py  test_pbt_schema_validation.py  test_pbt_winner_selection.py  test_projection.py  test_recruiter_csv_adapter.py  test_recruiter_notes_adapter.py  (+6 more)
(+60 files in other folders)
